--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <a href="file:///C:/VS%20Code/html/new.html"><img src="../images/eye.png" class="logo"></a>
+                <a href="#"><img src="eye.png" class="logo"></a>
             </div>
             <!-- <span class="fa fa-bars menu-icon"></span> -->
             <div class="header-right">
