--- a/testsite/html/new.html
+++ b/testsite/html/new.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new</title>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
-    <link rel="stylesheet" href="../css/new.css">
-    <link rel="stylesheet" href="../css/new_r.css">
+    <link rel="stylesheet" href="../css/stylesheet.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
@@ -19,8 +18,8 @@
             <!-- <span class="fa fa-bars menu-icon"></span> -->
             <div class="header-right">
                 <a href="https://www.prds.net/a_shop_detail/g_10996/">セクキャバ</a>
-                <a href="file:///C:/VS%20Code/html/signin.html" class="signin">新規山姥</a>
-                <a href="file:///C:/VS%20Code/html/gallery2.html" class="login">黒烏龍茶</a>
+                <a href="signin.html" class="signin">新規山姥</a>
+                <a href="gallery2.html" class="login">黒烏龍茶</a>
             </div>
         </div>
     </header>
