--- a/testsite/html/signin.html
+++ b/testsite/html/signin.html
@@ -17,8 +17,8 @@
         <!-- <span class="fa fa-bars menu-icon"></span> -->
         <div class="header-right">
             <a href="https://www.prds.net/a_shop_detail/g_10996/">セクキャバ</a>
-            <a href="file:///C:/VS%20Code/html/signin.html" class="signin">新規山姥</a>
-            <a href="file:///C:/VS%20Code/html/gallery2.html" class="login">黒烏龍茶</a>
+            <a href="signin.html" class="signin">新規山姥</a>
+            <a href="gallery2.html" class="login">黒烏龍茶</a>
         </div>
     </div>
 </header>
@@ -27,7 +27,7 @@
     <div class="main-wrapper">
         <div class="container">
             <h1>新規山姥登録</h1>
-            <form action="file:///C:/VS%20Code/html/new.html" method="POST">
+            <form action="../html/index.html" method="POST">
                 <p>メールアドレス、またはユーザーID</p>
                 <input type="text" id="user_id" value="" size="24">
                 <p>パスワード</p>
