--- a/testsite/html/signin.html
+++ b/testsite/html/signin.html
@@ -27,7 +27,7 @@
     <div class="main-wrapper">
         <div class="container">
             <h1>新規山姥登録</h1>
-            <form action="../html/index.html" method="POST">
+            <form action="html/index.html" method="POST">
                 <p>メールアドレス、またはユーザーID</p>
                 <input type="text" id="user_id" value="" size="24">
                 <p>パスワード</p>
