--- a/testsite/html/gallery2.html
+++ b/testsite/html/gallery2.html
@@ -17,8 +17,8 @@
             <!-- <span class="fa fa-bars menu-icon"></span> -->
             <div class="header-right">
                 <a href="https://www.prds.net/a_shop_detail/g_10996/">セクキャバ</a>
-                <a href="file:///C:/VS%20Code/html/signin.html" class="signin">新規山姥</a>
-                <a href="file:///C:/VS%20Code/html/gallery2.html" class="login">黒烏龍茶</a>
+                <a href="signin.html" class="signin">新規山姥</a>
+                <a href="gallery2.html" class="login">黒烏龍茶</a>
             </div>
         </div>
     </header>
