--- a/testsite/html/index.html
+++ b/testsite/html/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-nav">
             <div class="header-left">
-                <a href="file:///C:/VS%20Code/html/new.html"><img src="../images/eye.png" class="logo"></a>
+                <a href="index.html"><img src="../images/eye.png" class="logo"></a>
             </div>
             <!-- <span class="fa fa-bars menu-icon"></span> -->
             <div class="header-right">
